morriscript.output
Grammar

    0 $accept: translation_unit $end

    1 translation_unit: definition_or_statement
    2                 | translation_unit definition_or_statement

    3 definition_or_statement: function_definition
    4                        | class_definition
    5                        | statement

    6 function_definition: FUNCTION IDENTIFIER LP parameter_list RP block
    7                    | FUNCTION IDENTIFIER LP RP block

    8 class_definition: CLASS IDENTIFIER block

    9 parameter_list: LET IDENTIFIER
   10               | LET IDENTIFIER COMMA parameter_list

   11 argument_list: expression
   12              | argument_list COMMA expression

   13 statement_list: statement
   14               | statement_list statement

   15 expression: logical_or_expression
   16           | primary_expression ASSIGN expression
   17           | error RP

   18 logical_or_expression: logical_and_expression
   19                      | logical_or_expression LOGICAL_OR logical_and_expression

   20 logical_and_expression: equality_expression
   21                       | logical_and_expression LOGICAL_AND equality_expression

   22 equality_expression: relational_expression
   23                    | equality_expression EQ relational_expression
   24                    | equality_expression NE relational_expression

   25 relational_expression: additive_expression
   26                      | relational_expression GT additive_expression
   27                      | relational_expression GE additive_expression
   28                      | relational_expression LT additive_expression
   29                      | relational_expression LE additive_expression

   30 additive_expression: multiplicative_expression
   31                    | additive_expression ADD multiplicative_expression
   32                    | additive_expression SUB multiplicative_expression

   33 multiplicative_expression: unary_expression
   34                          | multiplicative_expression MUL unary_expression
   35                          | multiplicative_expression DIV unary_expression
   36                          | multiplicative_expression MOD unary_expression

   37 unary_expression: primary_expression
   38                 | SUB unary_expression

   39 primary_expression: IDENTIFIER LP argument_list RP
   40                   | IDENTIFIER LP RP
   41                   | IDENTIFIER LB primary_expression RB
   42                   | IDENTIFIER DOT IDENTIFIER
   43                   | NEW IDENTIFIER LP RP
   44                   | LP expression RP
   45                   | IDENTIFIER
   46                   | INT_LITERAL
   47                   | DOUBLE_LITERAL
   48                   | STRING_LITERAL
   49                   | TRUE_T
   50                   | FALSE_T
   51                   | NULL_T
   52                   | closure_definition

   53 closure_definition: LP parameter_list RP CLOSURE block
   54                   | LP RP CLOSURE block

   55 statement: expression SEMICOLON
   56          | global_statement
   57          | let_statement
   58          | if_statement
   59          | while_statement
   60          | for_statement
   61          | return_statement
   62          | break_statement
   63          | continue_statement

   64 global_statement: GLOBAL_T identifier_list SEMICOLON

   65 let_statement: LET identifier_list SEMICOLON

   66 identifier_list: IDENTIFIER
   67                | IDENTIFIER LB INT_LITERAL RB
   68                | identifier_list COMMA IDENTIFIER

   69 if_statement: IF LP expression RP block
   70             | IF LP expression RP block ELSE block
   71             | IF LP expression RP block elsif_list
   72             | IF LP expression RP block elsif_list ELSE block

   73 elsif_list: elsif
   74           | elsif_list elsif

   75 elsif: ELSIF LP expression RP block

   76 while_statement: WHILE LP expression RP block

   77 for_statement: FOR LP expression_opt SEMICOLON expression_opt SEMICOLON expression_opt RP block

   78 expression_opt: /* empty */
   79               | expression

   80 return_statement: RETURN_T expression_opt SEMICOLON

   81 break_statement: BREAK SEMICOLON

   82 continue_statement: CONTINUE SEMICOLON

   83 block: LC statement_list RC
   84      | LC RC
   85      | error RC


Terminals, with rules where they appear

$end (0) 0
error (256) 17 85
INT_LITERAL (258) 46 67
DOUBLE_LITERAL (259) 47
STRING_LITERAL (260) 48
IDENTIFIER (261) 6 7 8 9 10 39 40 41 42 43 45 66 67 68
GLOBAL_T (262) 64
LET (263) 9 10 65
FUNCTION (264) 6 7
CLASS (265) 8
RETURN_T (266) 80
IF (267) 69 70 71 72
ELSE (268) 70 72
ELSIF (269) 75
TRUE_T (270) 49
FALSE_T (271) 50
NULL_T (272) 51
FOR (273) 77
WHILE (274) 76
BREAK (275) 81
CONTINUE (276) 82
LP (277) 6 7 39 40 43 44 53 54 69 70 71 72 75 76 77
RP (278) 6 7 17 39 40 43 44 53 54 69 70 71 72 75 76 77
LB (279) 41 67
RB (280) 41 67
LC (281) 83 84
RC (282) 83 84 85
SEMICOLON (283) 55 64 65 77 80 81 82
COMMA (284) 10 12 68
CLOSURE (285) 53 54
DOT (286) 42
LOGICAL_AND (287) 21
LOGICAL_OR (288) 19
ASSIGN (289) 16
EQ (290) 23
NE (291) 24
GT (292) 26
GE (293) 27
LT (294) 28
LE (295) 29
ADD (296) 31
SUB (297) 32 38
MUL (298) 34
DIV (299) 35
MOD (300) 36
NEW (301) 43


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
translation_unit (48)
    on left: 1 2, on right: 0 2
definition_or_statement (49)
    on left: 3 4 5, on right: 1 2
function_definition (50)
    on left: 6 7, on right: 3
class_definition (51)
    on left: 8, on right: 4
parameter_list (52)
    on left: 9 10, on right: 6 10 53
argument_list (53)
    on left: 11 12, on right: 12 39
statement_list (54)
    on left: 13 14, on right: 14 83
expression (55)
    on left: 15 16 17, on right: 11 12 16 44 55 69 70 71 72 75 76 79
logical_or_expression (56)
    on left: 18 19, on right: 15 19
logical_and_expression (57)
    on left: 20 21, on right: 18 19 21
equality_expression (58)
    on left: 22 23 24, on right: 20 21 23 24
relational_expression (59)
    on left: 25 26 27 28 29, on right: 22 23 24 26 27 28 29
additive_expression (60)
    on left: 30 31 32, on right: 25 26 27 28 29 31 32
multiplicative_expression (61)
    on left: 33 34 35 36, on right: 30 31 32 34 35 36
unary_expression (62)
    on left: 37 38, on right: 33 34 35 36 38
primary_expression (63)
    on left: 39 40 41 42 43 44 45 46 47 48 49 50 51 52,
    on right: 16 37 41
closure_definition (64)
    on left: 53 54, on right: 52
statement (65)
    on left: 55 56 57 58 59 60 61 62 63, on right: 5 13 14
global_statement (66)
    on left: 64, on right: 56
let_statement (67)
    on left: 65, on right: 57
identifier_list (68)
    on left: 66 67 68, on right: 64 65 68
if_statement (69)
    on left: 69 70 71 72, on right: 58
elsif_list (70)
    on left: 73 74, on right: 71 72 74
elsif (71)
    on left: 75, on right: 73 74
while_statement (72)
    on left: 76, on right: 59
for_statement (73)
    on left: 77, on right: 60
expression_opt (74)
    on left: 78 79, on right: 77 80
return_statement (75)
    on left: 80, on right: 61
break_statement (76)
    on left: 81, on right: 62
continue_statement (77)
    on left: 82, on right: 63
block (78)
    on left: 83 84 85, on right: 6 7 8 53 54 69 70 71 72 75 76 77


state 0

    0 $accept: . translation_unit $end

    error           shift, and go to state 1
    INT_LITERAL     shift, and go to state 2
    DOUBLE_LITERAL  shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    IDENTIFIER      shift, and go to state 5
    GLOBAL_T        shift, and go to state 6
    LET             shift, and go to state 7
    FUNCTION        shift, and go to state 8
    CLASS           shift, and go to state 9
    RETURN_T        shift, and go to state 10
    IF              shift, and go to state 11
    TRUE_T          shift, and go to state 12
    FALSE_T         shift, and go to state 13
    NULL_T          shift, and go to state 14
    FOR             shift, and go to state 15
    WHILE           shift, and go to state 16
    BREAK           shift, and go to state 17
    CONTINUE        shift, and go to state 18
    LP              shift, and go to state 19
    SUB             shift, and go to state 20
    NEW             shift, and go to state 21

    translation_unit           go to state 22
    definition_or_statement    go to state 23
    function_definition        go to state 24
    class_definition           go to state 25
    expression                 go to state 26
    logical_or_expression      go to state 27
    logical_and_expression     go to state 28
    equality_expression        go to state 29
    relational_expression      go to state 30
    additive_expression        go to state 31
    multiplicative_expression  go to state 32
    unary_expression           go to state 33
    primary_expression         go to state 34
    closure_definition         go to state 35
    statement                  go to state 36
    global_statement           go to state 37
    let_statement              go to state 38
    if_statement               go to state 39
    while_statement            go to state 40
    for_statement              go to state 41
    return_statement           go to state 42
    break_statement            go to state 43
    continue_statement         go to state 44


state 1

   17 expression: error . RP

    RP  shift, and go to state 45


state 2

   46 primary_expression: INT_LITERAL .

    $default  reduce using rule 46 (primary_expression)


state 3

   47 primary_expression: DOUBLE_LITERAL .

    $default  reduce using rule 47 (primary_expression)


state 4

   48 primary_expression: STRING_LITERAL .

    $default  reduce using rule 48 (primary_expression)


state 5

   39 primary_expression: IDENTIFIER . LP argument_list RP
   40                   | IDENTIFIER . LP RP
   41                   | IDENTIFIER . LB primary_expression RB
   42                   | IDENTIFIER . DOT IDENTIFIER
   45                   | IDENTIFIER .

    LP   shift, and go to state 46
    LB   shift, and go to state 47
    DOT  shift, and go to state 48

    $default  reduce using rule 45 (primary_expression)


state 6

   64 global_statement: GLOBAL_T . identifier_list SEMICOLON

    IDENTIFIER  shift, and go to state 49

    identifier_list  go to state 50


state 7

   65 let_statement: LET . identifier_list SEMICOLON

    IDENTIFIER  shift, and go to state 49

    identifier_list  go to state 51


state 8

    6 function_definition: FUNCTION . IDENTIFIER LP parameter_list RP block
    7                    | FUNCTION . IDENTIFIER LP RP block

    IDENTIFIER  shift, and go to state 52


state 9

    8 class_definition: CLASS . IDENTIFIER block

    IDENTIFIER  shift, and go to state 53


state 10

   80 return_statement: RETURN_T . expression_opt SEMICOLON

    error           shift, and go to state 1
    INT_LITERAL     shift, and go to state 2
    DOUBLE_LITERAL  shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    IDENTIFIER      shift, and go to state 5
    TRUE_T          shift, and go to state 12
    FALSE_T         shift, and go to state 13
    NULL_T          shift, and go to state 14
    LP              shift, and go to state 19
    SUB             shift, and go to state 20
    NEW             shift, and go to state 21

    SEMICOLON  reduce using rule 78 (expression_opt)

    expression                 go to state 54
    logical_or_expression      go to state 27
    logical_and_expression     go to state 28
    equality_expression        go to state 29
    relational_expression      go to state 30
    additive_expression        go to state 31
    multiplicative_expression  go to state 32
    unary_expression           go to state 33
    primary_expression         go to state 34
    closure_definition         go to state 35
    expression_opt             go to state 55


state 11

   69 if_statement: IF . LP expression RP block
   70             | IF . LP expression RP block ELSE block
   71             | IF . LP expression RP block elsif_list
   72             | IF . LP expression RP block elsif_list ELSE block

    LP  shift, and go to state 56


state 12

   49 primary_expression: TRUE_T .

    $default  reduce using rule 49 (primary_expression)


state 13

   50 primary_expression: FALSE_T .

    $default  reduce using rule 50 (primary_expression)


state 14

   51 primary_expression: NULL_T .

    $default  reduce using rule 51 (primary_expression)


state 15

   77 for_statement: FOR . LP expression_opt SEMICOLON expression_opt SEMICOLON expression_opt RP block

    LP  shift, and go to state 57


state 16

   76 while_statement: WHILE . LP expression RP block

    LP  shift, and go to state 58


state 17

   81 break_statement: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 59


state 18

   82 continue_statement: CONTINUE . SEMICOLON

    SEMICOLON  shift, and go to state 60


state 19

   44 primary_expression: LP . expression RP
   53 closure_definition: LP . parameter_list RP CLOSURE block
   54                   | LP . RP CLOSURE block

    error           shift, and go to state 1
    INT_LITERAL     shift, and go to state 2
    DOUBLE_LITERAL  shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    IDENTIFIER      shift, and go to state 5
    LET             shift, and go to state 61
    TRUE_T          shift, and go to state 12
    FALSE_T         shift, and go to state 13
    NULL_T          shift, and go to state 14
    LP              shift, and go to state 19
    RP              shift, and go to state 62
    SUB             shift, and go to state 20
    NEW             shift, and go to state 21

    parameter_list             go to state 63
    expression                 go to state 64
    logical_or_expression      go to state 27
    logical_and_expression     go to state 28
    equality_expression        go to state 29
    relational_expression      go to state 30
    additive_expression        go to state 31
    multiplicative_expression  go to state 32
    unary_expression           go to state 33
    primary_expression         go to state 34
    closure_definition         go to state 35


state 20

   38 unary_expression: SUB . unary_expression

    INT_LITERAL     shift, and go to state 2
    DOUBLE_LITERAL  shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    IDENTIFIER      shift, and go to state 5
    TRUE_T          shift, and go to state 12
    FALSE_T         shift, and go to state 13
    NULL_T          shift, and go to state 14
    LP              shift, and go to state 19
    SUB             shift, and go to state 20
    NEW             shift, and go to state 21

    unary_expression    go to state 65
    primary_expression  go to state 66
    closure_definition  go to state 35


state 21

   43 primary_expression: NEW . IDENTIFIER LP RP

    IDENTIFIER  shift, and go to state 67


state 22

    0 $accept: translation_unit . $end
    2 translation_unit: translation_unit . definition_or_statement

    $end            shift, and go to state 68
    error           shift, and go to state 1
    INT_LITERAL     shift, and go to state 2
    DOUBLE_LITERAL  shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    IDENTIFIER      shift, and go to state 5
    GLOBAL_T        shift, and go to state 6
    LET             shift, and go to state 7
    FUNCTION        shift, and go to state 8
    CLASS           shift, and go to state 9
    RETURN_T        shift, and go to state 10
    IF              shift, and go to state 11
    TRUE_T          shift, and go to state 12
    FALSE_T         shift, and go to state 13
    NULL_T          shift, and go to state 14
    FOR             shift, and go to state 15
    WHILE           shift, and go to state 16
    BREAK           shift, and go to state 17
    CONTINUE        shift, and go to state 18
    LP              shift, and go to state 19
    SUB             shift, and go to state 20
    NEW             shift, and go to state 21

    definition_or_statement    go to state 69
    function_definition        go to state 24
    class_definition           go to state 25
    expression                 go to state 26
    logical_or_expression      go to state 27
    logical_and_expression     go to state 28
    equality_expression        go to state 29
    relational_expression      go to state 30
    additive_expression        go to state 31
    multiplicative_expression  go to state 32
    unary_expression           go to state 33
    primary_expression         go to state 34
    closure_definition         go to state 35
    statement                  go to state 36
    global_statement           go to state 37
    let_statement              go to state 38
    if_statement               go to state 39
    while_statement            go to state 40
    for_statement              go to state 41
    return_statement           go to state 42
    break_statement            go to state 43
    continue_statement         go to state 44


state 23

    1 translation_unit: definition_or_statement .

    $default  reduce using rule 1 (translation_unit)


state 24

    3 definition_or_statement: function_definition .

    $default  reduce using rule 3 (definition_or_statement)


state 25

    4 definition_or_statement: class_definition .

    $default  reduce using rule 4 (definition_or_statement)


state 26

   55 statement: expression . SEMICOLON

    SEMICOLON  shift, and go to state 70


state 27

   15 expression: logical_or_expression .
   19 logical_or_expression: logical_or_expression . LOGICAL_OR logical_and_expression

    LOGICAL_OR  shift, and go to state 71

    $default  reduce using rule 15 (expression)


state 28

   18 logical_or_expression: logical_and_expression .
   21 logical_and_expression: logical_and_expression . LOGICAL_AND equality_expression

    LOGICAL_AND  shift, and go to state 72

    $default  reduce using rule 18 (logical_or_expression)


state 29

   20 logical_and_expression: equality_expression .
   23 equality_expression: equality_expression . EQ relational_expression
   24                    | equality_expression . NE relational_expression

    EQ  shift, and go to state 73
    NE  shift, and go to state 74

    $default  reduce using rule 20 (logical_and_expression)


state 30

   22 equality_expression: relational_expression .
   26 relational_expression: relational_expression . GT additive_expression
   27                      | relational_expression . GE additive_expression
   28                      | relational_expression . LT additive_expression
   29                      | relational_expression . LE additive_expression

    GT  shift, and go to state 75
    GE  shift, and go to state 76
    LT  shift, and go to state 77
    LE  shift, and go to state 78

    $default  reduce using rule 22 (equality_expression)


state 31

   25 relational_expression: additive_expression .
   31 additive_expression: additive_expression . ADD multiplicative_expression
   32                    | additive_expression . SUB multiplicative_expression

    ADD  shift, and go to state 79
    SUB  shift, and go to state 80

    $default  reduce using rule 25 (relational_expression)


state 32

   30 additive_expression: multiplicative_expression .
   34 multiplicative_expression: multiplicative_expression . MUL unary_expression
   35                          | multiplicative_expression . DIV unary_expression
   36                          | multiplicative_expression . MOD unary_expression

    MUL  shift, and go to state 81
    DIV  shift, and go to state 82
    MOD  shift, and go to state 83

    $default  reduce using rule 30 (additive_expression)


state 33

   33 multiplicative_expression: unary_expression .

    $default  reduce using rule 33 (multiplicative_expression)


state 34

   16 expression: primary_expression . ASSIGN expression
   37 unary_expression: primary_expression .

    ASSIGN  shift, and go to state 84

    $default  reduce using rule 37 (unary_expression)


state 35

   52 primary_expression: closure_definition .

    $default  reduce using rule 52 (primary_expression)


state 36

    5 definition_or_statement: statement .

    $default  reduce using rule 5 (definition_or_statement)


state 37

   56 statement: global_statement .

    $default  reduce using rule 56 (statement)


state 38

   57 statement: let_statement .

    $default  reduce using rule 57 (statement)


state 39

   58 statement: if_statement .

    $default  reduce using rule 58 (statement)


state 40

   59 statement: while_statement .

    $default  reduce using rule 59 (statement)


state 41

   60 statement: for_statement .

    $default  reduce using rule 60 (statement)


state 42

   61 statement: return_statement .

    $default  reduce using rule 61 (statement)


state 43

   62 statement: break_statement .

    $default  reduce using rule 62 (statement)


state 44

   63 statement: continue_statement .

    $default  reduce using rule 63 (statement)


state 45

   17 expression: error RP .

    $default  reduce using rule 17 (expression)


state 46

   39 primary_expression: IDENTIFIER LP . argument_list RP
   40                   | IDENTIFIER LP . RP

    error           shift, and go to state 1
    INT_LITERAL     shift, and go to state 2
    DOUBLE_LITERAL  shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    IDENTIFIER      shift, and go to state 5
    TRUE_T          shift, and go to state 12
    FALSE_T         shift, and go to state 13
    NULL_T          shift, and go to state 14
    LP              shift, and go to state 19
    RP              shift, and go to state 85
    SUB             shift, and go to state 20
    NEW             shift, and go to state 21

    argument_list              go to state 86
    expression                 go to state 87
    logical_or_expression      go to state 27
    logical_and_expression     go to state 28
    equality_expression        go to state 29
    relational_expression      go to state 30
    additive_expression        go to state 31
    multiplicative_expression  go to state 32
    unary_expression           go to state 33
    primary_expression         go to state 34
    closure_definition         go to state 35


state 47

   41 primary_expression: IDENTIFIER LB . primary_expression RB

    INT_LITERAL     shift, and go to state 2
    DOUBLE_LITERAL  shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    IDENTIFIER      shift, and go to state 5
    TRUE_T          shift, and go to state 12
    FALSE_T         shift, and go to state 13
    NULL_T          shift, and go to state 14
    LP              shift, and go to state 19
    NEW             shift, and go to state 21

    primary_expression  go to state 88
    closure_definition  go to state 35


state 48

   42 primary_expression: IDENTIFIER DOT . IDENTIFIER

    IDENTIFIER  shift, and go to state 89


state 49

   66 identifier_list: IDENTIFIER .
   67                | IDENTIFIER . LB INT_LITERAL RB

    LB  shift, and go to state 90

    $default  reduce using rule 66 (identifier_list)


state 50

   64 global_statement: GLOBAL_T identifier_list . SEMICOLON
   68 identifier_list: identifier_list . COMMA IDENTIFIER

    SEMICOLON  shift, and go to state 91
    COMMA      shift, and go to state 92


state 51

   65 let_statement: LET identifier_list . SEMICOLON
   68 identifier_list: identifier_list . COMMA IDENTIFIER

    SEMICOLON  shift, and go to state 93
    COMMA      shift, and go to state 92


state 52

    6 function_definition: FUNCTION IDENTIFIER . LP parameter_list RP block
    7                    | FUNCTION IDENTIFIER . LP RP block

    LP  shift, and go to state 94


state 53

    8 class_definition: CLASS IDENTIFIER . block

    error  shift, and go to state 95
    LC     shift, and go to state 96

    block  go to state 97


state 54

   79 expression_opt: expression .

    $default  reduce using rule 79 (expression_opt)


state 55

   80 return_statement: RETURN_T expression_opt . SEMICOLON

    SEMICOLON  shift, and go to state 98


state 56

   69 if_statement: IF LP . expression RP block
   70             | IF LP . expression RP block ELSE block
   71             | IF LP . expression RP block elsif_list
   72             | IF LP . expression RP block elsif_list ELSE block

    error           shift, and go to state 1
    INT_LITERAL     shift, and go to state 2
    DOUBLE_LITERAL  shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    IDENTIFIER      shift, and go to state 5
    TRUE_T          shift, and go to state 12
    FALSE_T         shift, and go to state 13
    NULL_T          shift, and go to state 14
    LP              shift, and go to state 19
    SUB             shift, and go to state 20
    NEW             shift, and go to state 21

    expression                 go to state 99
    logical_or_expression      go to state 27
    logical_and_expression     go to state 28
    equality_expression        go to state 29
    relational_expression      go to state 30
    additive_expression        go to state 31
    multiplicative_expression  go to state 32
    unary_expression           go to state 33
    primary_expression         go to state 34
    closure_definition         go to state 35


state 57

   77 for_statement: FOR LP . expression_opt SEMICOLON expression_opt SEMICOLON expression_opt RP block

    error           shift, and go to state 1
    INT_LITERAL     shift, and go to state 2
    DOUBLE_LITERAL  shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    IDENTIFIER      shift, and go to state 5
    TRUE_T          shift, and go to state 12
    FALSE_T         shift, and go to state 13
    NULL_T          shift, and go to state 14
    LP              shift, and go to state 19
    SUB             shift, and go to state 20
    NEW             shift, and go to state 21

    SEMICOLON  reduce using rule 78 (expression_opt)

    expression                 go to state 54
    logical_or_expression      go to state 27
    logical_and_expression     go to state 28
    equality_expression        go to state 29
    relational_expression      go to state 30
    additive_expression        go to state 31
    multiplicative_expression  go to state 32
    unary_expression           go to state 33
    primary_expression         go to state 34
    closure_definition         go to state 35
    expression_opt             go to state 100


state 58

   76 while_statement: WHILE LP . expression RP block

    error           shift, and go to state 1
    INT_LITERAL     shift, and go to state 2
    DOUBLE_LITERAL  shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    IDENTIFIER      shift, and go to state 5
    TRUE_T          shift, and go to state 12
    FALSE_T         shift, and go to state 13
    NULL_T          shift, and go to state 14
    LP              shift, and go to state 19
    SUB             shift, and go to state 20
    NEW             shift, and go to state 21

    expression                 go to state 101
    logical_or_expression      go to state 27
    logical_and_expression     go to state 28
    equality_expression        go to state 29
    relational_expression      go to state 30
    additive_expression        go to state 31
    multiplicative_expression  go to state 32
    unary_expression           go to state 33
    primary_expression         go to state 34
    closure_definition         go to state 35


state 59

   81 break_statement: BREAK SEMICOLON .

    $default  reduce using rule 81 (break_statement)


state 60

   82 continue_statement: CONTINUE SEMICOLON .

    $default  reduce using rule 82 (continue_statement)


state 61

    9 parameter_list: LET . IDENTIFIER
   10               | LET . IDENTIFIER COMMA parameter_list

    IDENTIFIER  shift, and go to state 102


state 62

   54 closure_definition: LP RP . CLOSURE block

    CLOSURE  shift, and go to state 103


state 63

   53 closure_definition: LP parameter_list . RP CLOSURE block

    RP  shift, and go to state 104


state 64

   44 primary_expression: LP expression . RP

    RP  shift, and go to state 105


state 65

   38 unary_expression: SUB unary_expression .

    $default  reduce using rule 38 (unary_expression)


state 66

   37 unary_expression: primary_expression .

    $default  reduce using rule 37 (unary_expression)


state 67

   43 primary_expression: NEW IDENTIFIER . LP RP

    LP  shift, and go to state 106


state 68

    0 $accept: translation_unit $end .

    $default  accept


state 69

    2 translation_unit: translation_unit definition_or_statement .

    $default  reduce using rule 2 (translation_unit)


state 70

   55 statement: expression SEMICOLON .

    $default  reduce using rule 55 (statement)


state 71
